objects/User.object
<CustomObject>
    <fields>
        <fullName>Check_Manager__c</fullName>
        <formula>IF( ManagerId = $User.Id , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged in Trailmaker</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_Mentor__c</fullName>
        <formula>IF( Mentor__c = $User.Id , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged In Guide</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Left__c</fullName>
        <formula>On_boarding_End_Date__c -  Joining_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Energizers__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Energizers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joining_Date__c</fullName>
        <label>Onboarding Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Medals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <label>Guide</label>
        <relationshipName>Mentor</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>On_boarding_End_Date__c</fullName>
        <label>On-boarding End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Onboarding_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Onboarding Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Onboarding_Extend__c</fullName>
        <label>Reason for Onboarding Extend</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Values__c</fullName>
        <label>Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision__c</fullName>
        <label>Vision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>